--- a/MasterMindWPL/MainWindow.xaml
+++ b/MasterMindWPL/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MasterMindWPL"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid Background="LightGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
