--- a/MasterMindWPL/MainWindow.xaml
+++ b/MasterMindWPL/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MasterMindWPL"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid Background="LightGray">
+    <Grid Background="Gray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
@@ -22,10 +22,10 @@
         <ComboBox Name="cboColors2"  Grid.Column="1" SelectionChanged="cboColors2_SelectionChanged"></ComboBox>
         <ComboBox Name="cboColors3"  Grid.Column="2" SelectionChanged="cboColors3_SelectionChanged"></ComboBox>
         <ComboBox Name="cboColors4" Grid.Column="3" SelectionChanged="cboColors4_SelectionChanged"></ComboBox>
-        <Ellipse Name="ellipseColor1" Grid.Row="1" Margin="50"></Ellipse>
-        <Ellipse Name="ellipseColor2" Grid.Row="1" Grid.Column="1" Margin="50"></Ellipse>
-        <Ellipse Name="ellipseColor3" Grid.Row="1" Grid.Column="2" Margin="50"></Ellipse>
-        <Ellipse Name="ellipseColor4" Grid.Row="1" Grid.Column="3" Margin="50"></Ellipse>
-        <Button Name="btnCheckCode" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="50,70">Check code</Button>
+        <Ellipse Name="ellipseColor1" Grid.Row="1" Margin="50" StrokeThickness="5"></Ellipse>
+        <Ellipse Name="ellipseColor2" Grid.Row="1" Grid.Column="1" Margin="50" StrokeThickness="5"></Ellipse>
+        <Ellipse Name="ellipseColor3" Grid.Row="1" Grid.Column="2" Margin="50" StrokeThickness="5"></Ellipse>
+        <Ellipse Name="ellipseColor4" Grid.Row="1" Grid.Column="3" Margin="50" StrokeThickness="5"></Ellipse>
+        <Button Name="btnCheckCode" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="50,70" Click="btnCheckCode_Click">Check code</Button>
     </Grid>
 </Window>
